--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "zod": "3.23.8"
   }
 }
